# KPO_HW1

./: CMakeLists.txt  README.md
src/app/: DI-container.h  main.cpp
src/app/Console/: ConsoleUI.cpp  ConsoleUI.h  InputHelper.h
src/domain/Animals/: AllAnimals.h  Animal.cpp  Animal.h  Herbo.cpp  Herbo.h  Monkey.h  Predator.h  Rabbit.h  Tiger.h  Wolf.h
src/domain/IdGenerator/: IdGenerator.h
src/domain/Interfaces/: AllInterfaces.h  IAlive.h  IAnimalRepository.h  IIdGenerator.h  IInventory.h  IThingRepository.h  IVeterinaryClinic.h  IZoo.h
src/domain/Repositories/: AnimalRepository.cpp  AnimalRepository.h  ThingRepository.cpp  ThingRepository.h
src/domain/Things/: Computer.h  Table.h  Thing.cpp  Thing.h
src/domain/VeterinaryClinic/: VeterinaryClinic.h
src/domain/ZooService/: ZooService.cpp  ZooService.h
